--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/PvPSnake1.1.0.loader.js";
       var config = {
-        dataUrl: buildUrl + "/PvPSnake1.1.0.data.br",
-        frameworkUrl: buildUrl + "/PvPSnake1.1.0.framework.js.br",
-        codeUrl: buildUrl + "/PvPSnake1.1.0.wasm.br",
+        dataUrl: buildUrl + "/PvPSnake1.1.0.data",
+        frameworkUrl: buildUrl + "/PvPSnake1.1.0.framework.js",
+        codeUrl: buildUrl + "/PvPSnake1.1.0.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "PVPSnake 1.0.0",
